--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 #   Main Configs   #
 # ---------------- #
 baseurl:
-url: https://mazhuang.org
+url: https://wujinqing006.org
 date_format: "ordinal"
-title: 码志
+title: Jincen Wu's lab_0208
 subtitle: "公众号：闷骚的程序员"
 description: "马壮的个人博客，公众号：闷骚的程序员"
 keywords: 码志, Zhuang Ma, mzlogin, mazhuang, 闷骚的程序员
@@ -13,7 +13,7 @@ encoding: "utf-8"
 # 页面左下角显示的年份
 since: 2015
 # 源码仓库，请替换成自己的
-repository: mzlogin/mzlogin.github.io
+repository: wujinqing006.github.io
 # 对 css 和 js 资源的 cdn 加速配置
 cdn:
     jsdelivr:
