--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ baseurl:
 url: https://wujinqing006.org
 date_format: "ordinal"
 title: Jincen Wu's lab_0208
-subtitle: "公众号：闷骚的程序员"
-description: "马壮的个人博客，公众号：闷骚的程序员"
-keywords: 码志, Zhuang Ma, mzlogin, mazhuang, 闷骚的程序员
+subtitle: "公众号：二呆"
+description: "无"
+keywords: 生物医药, 杂思
 timezone: Asia/Shanghai
 encoding: "utf-8"
 # 页面左下角显示的年份
@@ -57,12 +57,12 @@ highlight_theme: github
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Zhuang Ma
+author: jincen
 organization: 
 organization_url: 
-github_username: mzlogin
-location: Wuhan, China
-email: chumpma@gmail.com
+github_username: wujinqing007
+location: guangzhou, China
+email: wujinqing007@gmail.com
 
 # ---------------- #
 #    Navigation    #
